tests/errors/surf_arity_06.ki
# return annotation violated: -> Dict returning a List
var f = Function() -> Dict:
    return [1, 2]
discard f()
